EnableRTGC = UseSerialGC && UseCompressedClasssPointers